# libusrio

./: .gitmodules  404.html  README.md  index.html  meson.build  meson_options.txt  mkdocs.yml
.github/workflows/: build.yml
include/: cmdbuff.h  gpio_controller.h  i2c_controller.h  meson.build  mfd.h  pinctrl.h  spi_controller.h
src/: dummy.c  gpio_controller.c  gpiod.c  i2c_controller.c  i2cdev.c  meson.build  mfd.c  spi_controller.c  spidev.c
